# FlappyBird.cpp

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat  clean-work-space.bat  linestat.sh  linux-toolchain.cmake  macos-toolchain.cmake  vcpkg.json  windows-toolchain.cmake
Flappy Bird/: Flappy Bird.sln
Flappy Bird/Debug/: Flappy Bird.ilk
Flappy Bird/Flappy Bird/: Flappy Bird.aps  Flappy Bird.cpp  Flappy Bird.hpp  Flappy Bird.rc  Flappy Bird.vcxproj  Flappy Bird.vcxproj.filters  LocalExceptions.cpp  LocalExceptions.hpp  WCexception.cpp  WCexception.hpp  log.cpp  log.hpp  resource.h  sfx.cpp  sfx.hpp  showHelp.cpp  showHelp.hpp  stdWCexception.cpp  stdWCexception.hpp  stdafx.cpp  stdafx.h  stdafx.hpp
Flappy Bird/Flappy Bird/Debug/: Flappy Bird.res  vc141.idb
Flappy Bird/Flappy Bird/Debug/Flappy Bird.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Flappy Bird.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Flappy Bird/Flappy Bird/Release/Flappy Bird.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Flappy Bird.lastbuildstate  Flappy Bird.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
Flappy Bird/Flappy Bird/x64/Debug/: flappy bird.obj.enc
Flappy Bird/Release/: Flappy Bird.iobj  Flappy Bird.ipdb
Flappy Bird/Resources/: Logo.psd
Flappy Bird/x64/Release/: Flappy Bird.iobj  Flappy Bird.ipdb
include/core/: AudioManager.hpp  Constants.hpp  Game.hpp  GameState.hpp  ResourceManager.hpp
include/game/: Bird.hpp  Entity.hpp  Pipe.hpp
src/: main.cpp
src/core/: AudioManager.cpp  Game.cpp  GameState.cpp  ResourceManager.cpp
src/game/: Bird.cpp  Entity.cpp  Pipe.cpp
